objects/Project_History__c.object
<CustomObject>
    <label>Project History</label>
    <nameField>
        <displayFormat>PH{00000}</displayFormat>
        <label>Project History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>ARR__c</fullName>
        <label>ARR</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CSM__c</fullName>
        <label>CSM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Project Histories</relationshipLabel>
        <relationshipName>Project_Histories1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>As_Of_Date__c</fullName>
        <inlineHelpText>Date of the snapshot</inlineHelpText>
        <label>As Of Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Backend_Stage__c</fullName>
        <label>Backend Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Makers_In_User__c</fullName>
        <label>Makers In User</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Purchased_Makers__c</fullName>
        <label>Purchased Makers</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vitally_Core_Actions__c</fullName>
        <label>Vitally Core Actions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vitally_Health_Score__c</fullName>
        <label>Vitally Health Score</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Day_of_Week_As_of_Date__c</fullName>
        <formula>Case(Weekday(As_Of_Date__c  ),
1,&quot;1-Sun&quot;,
2,&quot;2-Mon&quot;,
3,&quot;3-Tue&quot;,
4,&quot;4-Wed&quot;,
5,&quot;5-Thu&quot;,
6,&quot;6-Fri&quot;,
7,&quot;7-Sat&quot;,
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Snapshot Day of the Week, 1-Sun to 7-Sat</inlineHelpText>
        <label>Day of Week - As of Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vitally_Health_Category__c</fullName>
        <label>Vitally Health Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ETL_Subscription_End_Date__c</fullName>
        <label>ETL Subscription End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Vitally_Roadmap_Activated__c</fullName>
        <label>Vitally Roadmap Activated</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vitally_Insights_Activated__c</fullName>
        <label>Vitally Insights Activated</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vitally_Strategy_Activated__c</fullName>
        <label>Vitally Strategy Activated</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vitally_of_Insights_created__c</fullName>
        <label>Vitally # of Insights created</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vitally_Enterprise_Activated__c</fullName>
        <label>Vitally Enterprise Activated</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vitally_of_roadmap_views_L30__c</fullName>
        <label>Vitally # of roadmap views L30</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vitally_Foundations_Activated__c</fullName>
        <label>Vitally Foundations Activated</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vitally_of_Makers_logged_in_L30__c</fullName>
        <label>Vitally % of Makers logged in L30</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vitally_of_All_users_viewing_Roadmap__c</fullName>
        <label>Vitally % of All users viewing Roadmap</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vitally_of_Contributors_Logged_in_L30__c</fullName>
        <label>Vitally % of Contributors Logged in L30</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>